--- a/web/index.html
+++ b/web/index.html
@@ -19,11 +19,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description"
-    content="Professional car photography showboard quoting application. Create custom quotes for automotive photography services with pricing calculations.">
-  <meta name="keywords" content="car photography, showboard, automotive, quotes, pricing">
-  <meta name="author" content="Photomotive">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A new Flutter project.">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -34,14 +30,8 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png" />
 
-  <title>Showboard Quoting App</title>
+  <title>showboard_quoting_app</title>
   <link rel="manifest" href="manifest.json">
-
-  <!-- Vercel Analytics -->
-  <script>
-    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
-  </script>
-  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 
 <body>
